--- a/views/auth/login.ejs
+++ b/views/auth/login.ejs
@@ -7,15 +7,11 @@
   <br>
   <label for="password">Password</label>
   <input type="password" name="password" placeholder="Your password">
+  <br>  
+  <%- include('../partials/notifications') %>
   <br>
-  <% if ( typeof(error) != "undefined") { %>
-    <div class="alert alert-danger" role="alert">
-      <%= error %>
-    </div>
-    <% } %>
-    <br>
-    <p class="account-message">
-      Don't have an account? <a href="/signup">Sign up</a>
-    </p>
-    <button>Entra melon!!</button>
+  <p class="account-message">
+    Don't have an account? <a href="/signup">Sign up</a>
+  </p>
+  <button>Entra melon!!</button>
 </form>
